force-app/main/default/objects/Product2/fields/Do_Update_Order__c.field-meta.xml
<CustomField>
    <fullName>Do_Update_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to add products to orders on visualforce pages. When this checkbox is checked this product will be added to an order.</description>
    <label>Do Update Order</label>
    <type>Checkbox</type>
</CustomField>