force-app/main/default/objects/Product2/fields/Number_To_Add__c.field-meta.xml
<CustomField>
    <fullName>Number_To_Add__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to add products to orders on custom visualforce pages. This field describes the number of this product to add to an order.</description>
    <label>Number To Add</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>