force-app/main/default/objects/Product2/recordTypes/Office_Infrastructure.recordType-meta.xml
<RecordType>
    <fullName>Office_Infrastructure</fullName>
    <active>true</active>
    <label>Office Infrastructure</label>
</RecordType>